[project]
name = "usepdr"
version = "0.1.0"
description = ""
authors = [
    {name = "slackmodel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.24.0,<2.0.0)",
    "publicdatareader (>=1.1.1.post2,<2.0.0)",
    "shiny (>=1.3.0,<2.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "faicons (>=0.2.2,<0.3.0)",
    "shinywidgets (>=0.5.1,<0.6.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ridgeplot (>=0.3.1,<0.4.0)"
]

[tool.poetry]
package-mode = false

    
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
